--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 ./observe-reporting-splunk/observe_reporting/local/
-./observe-reporting-splunk/SUIT/SUIT-setup-page-example/node_modules/
+*/node_modules/
 *pyc
