ui code and stuff

--- a/observe-reporting-splunk/observe_reporting/default/commands.conf
+++ b/observe-reporting-splunk/observe_reporting/default/commands.conf
@@ -2,6 +2,7 @@
 filename = obsv_fetch.py
 chunked = true
 python.version = python3
-is_risky = true
-passauth = true 
+is_risky = false
+passauth = true
+local = true
 
