--- a/observe-reporting-splunk/observe_reporting/default/commands.conf
+++ b/observe-reporting-splunk/observe_reporting/default/commands.conf
@@ -6,3 +6,11 @@ is_risky = false
 passauth = true
 local = true
 
+[obsvds]
+filename = obsv_datasets.py
+chunked = true
+python.version = python3
+is_risky = false
+passauth = true
+local = true
+
