--- a/observe-reporting-splunk/observe_reporting/default/searchbnf.conf
+++ b/observe-reporting-splunk/observe_reporting/default/searchbnf.conf
@@ -1,7 +1,14 @@
 [obsv-command]
 syntax = obsv <datasetId>=<datasetValue>
-shortdesc = Fetch data from Observe and print it out into the serach results. This is a generating command
-description = Pull data from Observes query API
+shortdesc = Fetch data from Observe and print it out into the serach results.
+description = Pull data from Observes query API.
 comment1 = Grab some data via the dataset id
 example1 = ... | obsv datasetId=41030265
+usage = public
+
+[obsvds-command]
+syntax = obsvds 
+shortdesc = Fetch a list of datasets from the Observe API
+description = Pull dataset metadata from Observes query API.
+example1 = ... | obsvds
 usage = public
