--- a/observe-reporting-splunk/observe_reporting/default/app.conf
+++ b/observe-reporting-splunk/observe_reporting/default/app.conf
@@ -4,6 +4,9 @@ author = Kyle Champlin
 version = 1.0.0
 remote_tab = false
 
+[package]
+id = observe_reporting
+
 [install]
 is_configured = 0
 build = 1
@@ -15,3 +18,6 @@ setup_view = settings
 
 [id]
 version = 1.0.0
+
+[triggers]
+reload.observe = simple
