--- a/observe-reporting-splunk/observe_reporting/default/searchbnf.conf
+++ b/observe-reporting-splunk/observe_reporting/default/searchbnf.conf
@@ -2,7 +2,7 @@
 syntax = obsv <datasetId>=<datasetValue>
 shortdesc = Fetch data from Observe and print it out into the serach results.
 description = Pull data from Observes query API.
-comment1 = Grab some data via the dataset id
+comment1 = Query the Observe REST API and return data for a specific dataset
 example1 = ... | obsv datasetId=41030265
 usage = public
 
@@ -10,5 +10,6 @@ usage = public
 syntax = obsvds 
 shortdesc = Fetch a list of datasets from the Observe API
 description = Pull dataset metadata from Observes query API.
+comment1 = Query the Observe REST API for a list of Datasets and their metadata
 example1 = ... | obsvds
 usage = public
