initial commit for API key support

--- a/observe-reporting-splunk/observe_reporting/default/app.conf
+++ b/observe-reporting-splunk/observe_reporting/default/app.conf
@@ -1,5 +1,5 @@
 [launcher]
-description = Observe Reporting Module
+description = Observe for Splunk
 author = Kyle Champlin
 version = 1.0.0
 remote_tab = false
@@ -13,7 +13,7 @@ build = 1
 
 [ui]
 is_visible = 1
-label = Observe Reporting Module
+label = Observe for Splunk
 setup_view = settings
 
 [id]
