--- a/observe-reporting-splunk/observe_reporting/default/commands.conf
+++ b/observe-reporting-splunk/observe_reporting/default/commands.conf
@@ -14,3 +14,12 @@ is_risky = false
 passauth = true
 local = true
 
+
+[obsvhttp]
+filename = obsv_ingest.py
+chunked = true
+python.version = python3
+is_risky = false
+passauth = true
+local = false
+
