fixes for http support

--- a/observe-reporting-splunk/observe_reporting/default/searchbnf.conf
+++ b/observe-reporting-splunk/observe_reporting/default/searchbnf.conf
@@ -14,8 +14,8 @@ comment1 = Query the Observe REST API for a list of Datasets and their metadata
 example1 = ... | obsvds
 usage = public
 
-[obshttp-command]
-syntax = obsvds 
+[obsvhttp-command]
+syntax = obsvhttp
 shortdesc = Ingest data over HTTP to your Observe tenant 
 description = Ingest data over HTTP to your Observe tenant 
 comment1 = Append this command to a search to send results to Observe
