--- a/observe-reporting-splunk/observe_reporting/default/commands.conf
+++ b/observe-reporting-splunk/observe_reporting/default/commands.conf
@@ -1,6 +1,5 @@
 [obsv]
 filename = obsv_fetch.py
-chunked = true
 python.version = python3
 is_risky = false
 passauth = true
@@ -8,7 +7,6 @@ local = true
 
 [obsvds]
 filename = obsv_datasets.py
-chunked = true
 python.version = python3
 is_risky = false
 passauth = true
@@ -17,9 +15,8 @@ local = true
 
 [obsvhttp]
 filename = obsv_ingest.py
-chunked = true
 python.version = python3
 is_risky = false
 passauth = true
-local = false
+local = true
 
