Update commands.conf chunked
chunked = true needed

--- a/observe-reporting-splunk/observe_reporting/default/commands.conf
+++ b/observe-reporting-splunk/observe_reporting/default/commands.conf
@@ -4,6 +4,7 @@ python.version = python3
 is_risky = false
 passauth = true
 local = true
+chunked = true
 
 [obsvds]
 filename = obsv_datasets.py
@@ -11,7 +12,7 @@ python.version = python3
 is_risky = false
 passauth = true
 local = true
-
+chunked = true
 
 [obsvhttp]
 filename = obsv_ingest.py
@@ -19,4 +20,4 @@ python.version = python3
 is_risky = false
 passauth = true
 local = true
-
+chunked = true
