--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ observe-reporting-splunk/observe_reporting/local/
 observe-reporting-splunk/observe_reporting/metadata/local.meta
 observe-reporting-splunk/.DS_Store
 observe-reporting-splunk/observe_reporting/.DS_Store
+.DS_Store
