app inspect fixes

--- a/observe-reporting-splunk/observe_reporting/default/app.conf
+++ b/observe-reporting-splunk/observe_reporting/default/app.conf
@@ -1,11 +1,11 @@
 [launcher]
 description = Observe for Splunk
-author = Kyle Champlin
-version = 1.0.1
-remote_tab = false
+author = splunkbase@observeinc.com
+version = 1.0.2
 
 [package]
 id = observe_reporting
+
 
 [install]
 is_configured = 0
@@ -17,7 +17,8 @@ label = Observe for Splunk
 setup_view = settings
 
 [id]
-version = 1.0.1
+version = 1.0.2
+name = observe_reporting
 
 [triggers]
 reload.observe = simple
